# chinese-learning-web

./: .gitignore
client/: package.json
client/app/: globals.css  layout.tsx  page.tsx  theme.css
client/app/flashcards/: page.tsx
client/app/flashcards/_components/: controller.tsx  flashcard.tsx
client/app/flashcards/_data/: convert.ts  learned_words.csv  learned_words.ts  types.ts
daves_python/: 4mandarin_pitch_trainer.py  flashcardgame.py  flashcardgen.py  ymandarin_pitch_trainer.py
macks_python/: mise.toml  pyproject.toml
macks_python/src/mandarin_app/: __init__.py
macks_python/src/mandarin_app/audio/: __init__.py  engine.py
wails_mono/: audio.go  audio.go-example  go.mod  go.sum  main.go  package.json
wails_mono/data/: dictionary.csv
wails_mono/frontend/: package-lock.json  package.json  package.json.md5
wails_mono/frontend/src/: App.tsx  main.tsx
wails_mono/frontend/src/components/custom/: route-button.tsx
wails_mono/frontend/src/components/ui/: button.tsx
wails_mono/frontend/src/lib/: routes.ts
wails_mono/frontend/src/routes/: index.tsx
wails_mono/frontend/src/routes/audio/: index.tsx
wails_mono/frontend/src/routes/flashcard/: index.tsx
wails_mono/frontend/wailsjs/go/: models.ts
wails_mono/frontend/wailsjs/go/dictionary/: DictionaryService.d.ts  DictionaryService.js
wails_mono/frontend/wailsjs/go/main/: App.js
wails_mono/internal/audio/: engine.go
wails_mono/internal/dictionary/: service.go
wails_mono/internal/models/: dictionary.go
