[project]
name = "mandarin-app"
version = "0.1.0"
description = "An app for learning Mandarin"
readme = "README.md"
authors = [
    { name = "Mackenzie Bowes", email = "mackenzie@mackenziebowes.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
mandarin-app = "mandarin_app.main:start"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (F) and Isort (I) for clean imports
select = ["E", "F", "I"]
fixable = ["ALL"]
